# remote-ir

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs  utils.rs
