[package]
name = "remote-ir"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-svc = "0.49.1"
log = "0.4.22"

[build-dependencies]
embuild = "0.32.0"
